--- a/app/index_ru.html
+++ b/app/index_ru.html
@@ -61,8 +61,8 @@
 							<li data-menuanchor="thirdPage"><a href="#thirdPage">Наш опыт</a></li>
 							<li data-menuanchor="fourthPage"><a href="#fourthPage">Коллекции</a></li>
 							<li class="contacts-phone">
-								<a href="#">+38 050 949 6338</a>
-								<a href="#">+380 50 108 7700</a>
+								<a href="tel:+380509496338">+38 050 949 6338</a>
+								<a href="tel:+380501087700">+380 50 108 7700</a>
 							</li>
 						</ul>
 						<div class="language-pagination">
@@ -104,20 +104,17 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-1.jpg" id="test-1"
-								class="gallery-section__image" data-fancybox="images" data-caption="My caption">
+							<span href="./images/section-images/section-image-1.jpg"
+								class="gallery-section__image-min">
 								<img src="images/section-images/section-image-1.jpg" alt="section-image-1">
-								<button class="button button-preview">Смотреть</button>
-							</a>
+							</span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-2.jpg" class="gallery-section__image"
-								data-fancybox="images" data-caption="My caption">
+							<span href="./images/section-images/section-image-2.jpg" class="gallery-section__image-min">
 								<img src="images/section-images/section-image-2.jpg" alt="section-image-2">
-								<button class="button button-preview">Смотреть</button>
-							</a>
+							</span>
 						</div>
 						<div class="col-md-6">
 							<div class="description-section">
@@ -161,20 +158,16 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-3.jpg" class="gallery-section__image"
-								data-fancybox="images" data-caption="My caption">
+							<span href="./images/section-images/section-image-3.jpg" class="gallery-section__image-min">
 								<img src="images/section-images/section-image-3.jpg" alt="section-image-3">
-								<button class="button button-preview">Смотреть</button>
-							</a>
+							</span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="./images/section-images/section-image-4.jpg" class="gallery-section__image"
-								data-fancybox="images" data-caption="My caption">
+							<span href="./images/section-images/section-image-4.jpg" class="gallery-section__image-min">
 								<img src="images/section-images/section-image-4.jpg" alt="section-image-3">
-								<button class="button button-preview">Смотреть</button>
-							</a>
+							</span>
 						</div>
 						<div class="col-md-6">
 							<div class="description-section">
@@ -210,25 +203,25 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-5.jpg" class="gallery-section__image"
-									data-fancybox="gallery-2" data-caption="My caption">
-									<img src="images/section-images/section-image-5.jpg" alt="section-image-5">
+								<a href="./images/gallery-1/0.jpg" class="gallery-section__image"
+									data-fancybox="gallery-1">
+									<img src="./images/gallery-1/0.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
 								</a>
 								<div class="gallery-section__text">
-									<h3 class="gallery-section__title">Коллекция 2019 март</h3>
+									<h3 class="gallery-section__title">Коллекция 2019 Март</h3>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="gallery-section">
-								<a href="./images/section-images/section-image-6.jpg" class="gallery-section__image"
-									data-fancybox="gallery-1" data-caption="My caption">
-									<img src="images/section-images/section-image-6.jpg" alt="section-image-5">
+								<a href="./images/gallery-2/0.jpg" class="gallery-section__image"
+									data-fancybox="gallery-2">
+									<img src="images/gallery-2/0.jpg" alt="section-image-5">
 									<button class="button button-preview">Смотреть</button>
 								</a>
 								<div class="gallery-section__text">
-									<h3 class="gallery-section__title">Коллекция 2019 март</h3>
+									<h3 class="gallery-section__title">Коллекция 2019 Март</h3>
 								</div>
 							</div>
 						</div>
@@ -241,14 +234,14 @@
 					<img src="./images/logo-white.svg" alt="logo-white">
 				</div>
 				<ul class="footer__menu">
-					<li><a href="#">Сотрудничество</a></li>
-					<li><a href="#">Наш опыт</a></li>
-					<li><a href="#">Коллекции</a></li>
+					<li data-menuanchor="secondPage"><a href="#secondPage">Сотрудничество</a></li>
+					<li data-menuanchor="thirdPage"><a href="#thirdPage">Наш опыт</a></li>
+					<li data-menuanchor="fourthPage"><a href="#fourthPage">Коллекции</a></li>
 				</ul>
 				<div class="footer__contacts">
 					<p>Контакты</p>
-					<a href="#">+38 050 949 6338</a>
-					<a href="#">+380 50 108 7700</a>
+					<a href="tel:+380509496338">+38 050 949 6338</a>
+					<a href="tel:+380501087700">+380 50 108 7700</a>
 				</div>
 				<ul class="footer__social">
 					<li><a href="#"><img src="./images/instagram.svg" alt="instagram"></a></li>
@@ -454,96 +447,15 @@
 
 
 	<div class="gallery-images">
-		<a href="./images/section-images/section-image-2.jpg" data-fancybox="gallery-1">
-			<img src="images/section-images/section-image-2.jpg" alt="section-image-2">
+		<a href="./images/gallery-1/1.jpg" data-fancybox="gallery-1">
+			<img src="/images/gallery-1/1.jpg" alt="section-image-2">
 		</a>
-		<a href="./images/gallery-1/ABB_0019.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_0048.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_0058.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_0091.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3825.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3886.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3897.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3922.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3949.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3975.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_3988.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_4016.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_4033.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_4059.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8861.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8892.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8892.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8931.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8945.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_8999.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9048.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9155.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9193.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9213.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9241.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9444.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9469.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9508.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9520.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9540.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9594.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9614.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9633.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9651.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9660.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9692.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9780.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9789.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9817.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9824.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9946.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9953.jpg" data-fancybox="gallery-1"></a>
-		<a href="./images/gallery-1/ABB_9961.jpg" data-fancybox="gallery-1"></a>
 	</div>
 
 	<div class="gallery-images">
-		<a href="./images/section-images/section-image-2.jpg" data-fancybox="gallery-2">
-			<img src="images/section-images/section-image-2.jpg" alt="section-image-2">
+		<a href="./images/gallery-2/1.jpg" data-fancybox="gallery-2">
+			<img src="/images/gallery-2/1.jpg" alt="section-image-2">
 		</a>
-		<a href="./images/gallery-2/19-1-01-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-01.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-02-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-03.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-03==.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-04-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-04.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-04=.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-07.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-07_.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-09-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-09.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-09=.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-10+.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-10-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-10.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-11.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-11_.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-14+.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-14-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-14.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-15.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-15=.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-17-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-17=.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-18+.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-18.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-18.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-19-.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-19.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-20 - .jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-20.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-20=.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-22a.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-22b.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-23.jpg" data-fancybox="gallery-2"></a>
-		<a href="./images/gallery-2/19-1-23==.jpg" data-fancybox="gallery-2"></a>
 	</div>
 
 
@@ -557,30 +469,4 @@
 	<script src="js/main.js"></script>
 	<!--endbuild-->
 
-	<!-- <script>
-		// Отправка данных на сервер
-		$('#form').trigger('reset');
-		$(function() {
-		  'use strict';
-		  $('#form').on('submit', function(e) {
-			e.preventDefault();
-			$.ajax({
-			  url: './send.php',
-			  type: 'POST',
-			  contentType: false,
-			  processData: false,
-			  data: new FormData(this),
-			  success: function(msg) {
-				console.log(msg);
-				if (msg == 'ok') {
-				  alert('Сообщение отправлено');
-				  $('#form').trigger('reset'); // очистка формы
-				} else {
-				  alert('Ошибка');
-				}
-			  }
-			});
-		  });
-		});
-		</script> -->
 </body>
