--- a/app/index.html
+++ b/app/index.html
@@ -441,15 +441,15 @@
 
 
 	<div class="gallery-images">
-		<a href="./images/gallery-1/1.jpg" data-fancybox="gallery-1">
+<!-- 		<a href="./images/gallery-1/1.jpg" data-fancybox="gallery-1">
 			<img src="/images/gallery-1/1.jpg" alt="section-image-2">
-		</a>
+		</a> -->
 	</div>
 
 	<div class="gallery-images">
-		<a href="./images/gallery-2/1.jpg" data-fancybox="gallery-2">
+<!-- 		<a href="./images/gallery-2/1.jpg" data-fancybox="gallery-2">
 			<img src="/images/gallery-2/1.jpg" alt="section-image-2">
-		</a>
+		</a> -->
 	</div>
 
 
