changed lang to lowercase

--- a/app/index_ru.html
+++ b/app/index_ru.html
@@ -66,8 +66,8 @@
 							</li>
 						</ul>
 						<div class="language-pagination">
-							<a href="index.html" class="language-pagination-page">ENG</a>
-							<a href="index_ru.html" class="language-pagination-page active">RUS</a>
+							<a href="index.html" class="language-pagination-page">Eng</a>
+							<a href="index_ru.html" class="language-pagination-page active">Rus</a>
 						</div>
 					</header>
 					<div class="hero-image-content__promo">
