--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 			</div>
 		</section>
 		<section class="section">
-			<div class="content-section" data-color="beige">
+			<div class="content-section" data-color="beige" data-index="1">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
@@ -134,7 +134,7 @@
 			</div>
 		</section>
 		<section class="section">
-			<div class="content-section" data-color="blue">
+			<div class="content-section" data-color="blue" data-index="2">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
@@ -184,7 +184,7 @@
 			</div>
 		</section>
 		<section class="section">
-			<div class="content-section">
+			<div class="content-section" data-color="beige" data-index="3">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -221,8 +221,6 @@
 						</div>
 					</div>
 				</div>
-
-			</div>
 			<footer class="footer">
 				<div class="footer__logo">
 					<img src="./images/logo-white.svg" alt="logo-white">
@@ -243,6 +241,7 @@
 					<li><a href="https://www.facebook.com/Sapfir-couture-387587695212713/"><img src="./images/facebook.svg" alt="facebook"></a></li>
 				</ul>
 			</footer>
+			</div>
 		</section>
 	</div>
 
@@ -253,7 +252,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">send request</h5>
+					<h5 class="modal-title" id="exampleModalLabel">Send request</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -310,7 +309,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">select model</h5>
+					<h5 class="modal-title" id="exampleModalLabel">Select model</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -402,7 +401,7 @@
 							</select>
 						</label>
 						<label class="my-1 mr-2" for="inlineFormCustomSelectPref11">
-							<span>You are:?</span>
+							<span>You are?</span>
 							<select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref11"
 							name="person">
 								<option value="Choose..." selected>Choose...</option>
@@ -441,15 +440,15 @@
 
 
 	<div class="gallery-images">
-<!-- 		<a href="./images/gallery-1/1.jpg" data-fancybox="gallery-1">
+		<a href="./images/gallery-1/1.jpg" data-fancybox="gallery-1">
 			<img src="/images/gallery-1/1.jpg" alt="section-image-2">
-		</a> -->
+		</a>
 	</div>
 
 	<div class="gallery-images">
-<!-- 		<a href="./images/gallery-2/1.jpg" data-fancybox="gallery-2">
+		<a href="./images/gallery-2/1.jpg" data-fancybox="gallery-2">
 			<img src="/images/gallery-2/1.jpg" alt="section-image-2">
-		</a> -->
+		</a>
 	</div>
 
 
@@ -460,6 +459,7 @@
 	<script src="js/libs/jquery.pagepiling.min.js"></script>
 	<script src="js/libs/jquery.fancybox.min.js"></script>
 	<script src="js/libs/bootstrap.bundle.min.js"></script>
+	<script src="js/libs/jquery.touchSwipe.js"></script>
 	<script src="js/main.js"></script>
 	<!--endbuild-->
 
