--- a/app/index_ru.html
+++ b/app/index_ru.html
@@ -283,7 +283,7 @@
 							<label for="inputEmail3" class="col-12 col-form-label">E-mail</label>
 							<div class="col-12">
 								<input type="text" class="form-control" id="inputEmail3"
-									placeholder="Введите E-mail"  name="email">
+									placeholder="Введите E-mail"  name="email" required >
 							</div>
 						</div>
 						<div class="form-group row">
@@ -426,7 +426,7 @@
 							<div class="form-group">
 								<label for="exampleInputEmail1">E-mail</label>
 								<input type="email" class="form-control" id="exampleInputEmail1"
-									placeholder="Введите E-mail" name="email">
+									placeholder="Введите E-mail" name="email" required >
 							</div>
 							<div class="form-group">
 								<label for="exampleInputTel1">Телефон</label>
