--- a/app/index.html
+++ b/app/index.html
@@ -203,7 +203,7 @@
 									<button class="button button-preview">Watch</button>
 								</a>
 								<div class="gallery-section__text">
-									<h3 class="gallery-section__title">Collection 2019 of March</h3>
+									<h3 class="gallery-section__title">Collection 2019 of August</h3>
 								</div>
 							</div>
 						</div>
@@ -276,7 +276,7 @@
 							<label for="inputEmail3" class="col-12 col-form-label">E-mail</label>
 							<div class="col-12">
 								<input type="text" class="form-control" id="inputEmail3"
-									placeholder="Enter E-mail"  name="email">
+									placeholder="Enter E-mail"  name="email" required >
 							</div>
 						</div>
 						<div class="form-group row">
@@ -419,7 +419,7 @@
 							<div class="form-group">
 								<label for="exampleInputEmail1">E-mail</label>
 								<input type="email" class="form-control" id="exampleInputEmail1"
-									placeholder="Enter E-mail" name="email">
+									placeholder="Enter E-mail" name="email" required >
 							</div>
 							<div class="form-group">
 								<label for="exampleInputTel1">Phone number</label>
